<resources>
    <string name="app_name">KajianKu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Beranda</string>
    <string name="menu_saved_kajian">Kajianku</string>
    <string name="menu_profile">Profil</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="name">Nama</string>
    <string name="birth_date">Tanggal Lahir</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="kajian_history">Riwayat kajian</string>
    <string name="about_us">Tentang kami</string>
    <string name="update_profile">Update Profile</string>
    <string name="change_password">Ganti kata sandi</string>
    <string name="log_out">Keluar</string>
    <string name="poster_image">Gambar kajian</string>
    <string name="saved_kajian">Kajian Tersimpan</string>
    <string name="popular_kajian">Kajian Terpopuler</string>
    <string name="suggested_kajian">Kajian Untukmu</string>
    <string name="hint_search_kajian">Cari kajian…</string>
    <string name="content_desc_back">Kembali ke halaman sebelumnya</string>
    <string name="content_desc_share">Bagikan</string>
    <string name="description">Deskripsi</string>
    <string name="registration">Pendaftaran</string>
    <string name="content_desc_find_location">Cari lokasi</string>
    <string name="time_format">%s - selesai</string>
    <string name="share_kajian_title">Bagikan kajian ini sekarang</string>
    <string name="kajian_invitation">Yuk ikutan kajian %s</string>
    <string name="notification_title_reminder">Reminder Kajian</string>
    <string name="save_kajian">Simpan kajian</string>
    <string name="cancel_kajian">Batal Mengikuti Kajian</string>
    <string name="find_kajian">Cari kajian</string>
    <string name="empty_history">Riwayat Kajian Kosong</string>
    <string name="content_desc_back_to_home">back to home</string>
    <string name="message_kajian_reminder">Kajian "%s" akan segera dimulai %s lagi</string>
    <string name="delete_reminder_message">Pengingat berhasil dihapus</string>
    <string name="add_reminder_succeed_message">Pengingat berhasil ditambahkan</string>

    <string-array name="gender_list">
        <item>Ikhwan</item>
        <item>Akhwat</item>
    </string-array>
</resources>