<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/bg_fragment_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:drawableEnd="@drawable/ic_search"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_layout_search"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_search_kajian"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="32dp"
        app:boxCornerRadiusBottomStart="32dp"
        app:boxCornerRadiusTopEnd="32dp"
        app:boxCornerRadiusTopStart="32dp"
        app:endIconDrawable="@drawable/ic_search"
        app:endIconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_popular_kajian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/popular_kajian"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_layout_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_popular_kajian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/txt_popular_kajian"
        tools:itemCount="1"
        tools:listitem="@layout/item_popular_kajian" />

    <TextView
        android:id="@+id/txt_suggested_kajian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/suggested_kajian"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_view_popular_kajian" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_suggested_kajian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/txt_suggested_kajian"
        tools:listitem="@layout/item_kajian" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/progress_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/txt_suggested_kajian">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/item_kajian_placeholder" />

                <include layout="@layout/item_kajian_placeholder" />

                <include layout="@layout/item_kajian_placeholder" />

                <include layout="@layout/item_kajian_placeholder" />

                <include layout="@layout/item_kajian_placeholder" />

            </LinearLayout>
        </ScrollView>
    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>