<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".auth.login.LoginFragment">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/login"
        android:textColor="#7b7b7b"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="130dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="Email"
            android:textColor="@color/accent"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:backgroundTint="@color/primary"
            android:drawableLeft="@drawable/ic_baseline_mail_outline_24"
            android:drawablePadding="12dp"
            android:fontFamily="@font/montserrat_bold"
            android:hint="@gmail.com"
            android:inputType="textEmailAddress"
            android:textColor="@color/primary"
            android:textSize="14sp"
            tools:text="Rizkykirigaya@gmail.com" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="@dimen/margin_item_login"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_email">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="Pasword"
            android:textColor="@color/accent"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:backgroundTint="@color/primary"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="12dp"
            android:fontFamily="@font/montserrat_bold"
            android:hint="********"
            android:inputType="textPassword"
            android:textColor="@color/primary"
            android:textSize="14sp"
            tools:text="Rizkykirigaya@gmail.com" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_forget_passord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:fontFamily="@font/montserrat_medium"
        android:text="Forget Password ?"
        android:textColor="@color/primary"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/input_pass"
        app:layout_constraintTop_toBottomOf="@id/input_pass" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="62dp"
        android:backgroundTint="@color/primary"
        android:text="@string/login"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btn_to_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/sign_up"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/tv_don_t_have_an_account" />

    <TextView
        android:id="@+id/tv_don_t_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/accent_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_to_sign_up"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/loadingFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.1"
        android:background="@color/black"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/login_progress_bar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>